--- a/example/ts/package.json
+++ b/example/ts/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "node-mavlink",
+  "name": "node-mavlink-example-ts",
   "version": "0.1.0",
-  "description": "A library for parsing and packing MAVLink 2 messages",
-  "main": "lib/src/index.js",
-  "types": "lib/src/index.d.ts",
+  "description": "A typescript example for parsing and packing MAVLink 2 messages",
+  "main": "js/index.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "lib/**/*"
+    "build/**/*"
   ],
   "scripts": {
+    "start": "node build/index.js",
     "test": "jest --config jestconfig.json",
     "build": "tsc",
     "lint": "tslint -p tsconfig.json"
@@ -19,11 +20,12 @@
   "author": "Pascal Groß <pascal.gross@ifr.uni-stuttgart.de>",
   "license": "CC-BY-4.0",
   "devDependencies": {
-    "@types/jest": "^24.0.11",
     "@types/node": "^11.11.6",
-    "jest": "^24.5.0",
-    "ts-jest": "^24.0.0",
+    "@types/serialport": "^7.0.2",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
+  },
+  "dependencies": {
+    "serialport": "^7.1.4"
   }
 }
