--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "node-mavlink",
   "version": "0.1.0",
   "description": "A library for parsing and packing MAVLink 2 messages",
-  "main": "lib/src/index.js",
-  "types": "lib/src/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib/**/*"
   ],
@@ -18,9 +18,11 @@
   },
   "author": "Pascal Groß <pascal.gross@ifr.uni-stuttgart.de>",
   "license": "CC-BY-4.0",
+  "dependencies": {
+    "@types/node": "^11.11.6"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.6",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
     "tslint": "^5.14.0",
