--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language : node_js
 node_js :
  - stable
-before_install:
+python:
+ - 2.7
+install:
  - pip install future
  - git clone https://github.com/ifrunistuttgart/pymavlink
  - git clone https://github.com/mavlink/mavlink
  - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./assets ./mavlink/message_definitions/v1.0/common.xml
-install:
  - npm install
 script:
  - npm test
