--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js :
 python:
  - 2.7
 install:
- - pip install future
+ - apt-get install libffi-dev libssl-dev 
+ - pip install pyopenssl future
  - git clone https://github.com/ifrunistuttgart/pymavlink
  - git clone https://github.com/mavlink/mavlink
  - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./assets ./mavlink/message_definitions/v1.0/common.xml
