--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 before_install:
  - sudo apt-get update
  - sudo apt-get install -y libffi-dev libssl-dev libxml2-dev
- - sudo pip install pyopenssl future lxml libxml2 libxslt
+ - sudo pip install lxml libxml2 libxslt
+ - sudo pip install requests[security] pyopenssl future
 install:
  - git clone https://github.com/ifrunistuttgart/pymavlink
  - git clone https://github.com/mavlink/mavlink
