--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: node_js
 node_js:
  - stable
 before_install:
- - pip install --upgrade pip
+ - sudo pip install --upgrade pip
  - git clone https://github.com/ifrunistuttgart/pymavlink 
- - pip install -r requirements.txt
- - pip install flake8 pytest pytest-mock
+ - sudo pip install -r requirements.txt
  - git clone https://github.com/mavlink/mavlink  
  - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./assets ./mavlink/message_definitions/v1.0/common.xml
 install:
