--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_install:
  - sudo pip install --upgrade pip
  - git clone https://github.com/ifrunistuttgart/pymavlink 
- - sudo pip install -r requirements.txt
+ - sudo pip install -r ./pymavlink/requirements.txt
  - git clone https://github.com/mavlink/mavlink  
  - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./assets ./mavlink/message_definitions/v1.0/common.xml
 install:
