--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
  - git clone https://github.com/ifrunistuttgart/pymavlink 
  - sudo pip install -r ./pymavlink/requirements.txt
  - git clone https://github.com/mavlink/mavlink  
- - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./ifrunistuttgart/node-mavlink/assets ./mavlink/message_definitions/v1.0/common.xml
+ - mkdir assets
+ - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./assets ./mavlink/message_definitions/v1.0/common.xml
 install:
  - npm install
 script:
