--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
  - python pymavlink/tools/mavgen.py --lang TypeScript --wire-protocol 2.0 -o ./assets ./mavlink/message_definitions/v1.0/common.xml
 install:
  - npm install
+ - npm run build
  - ln -s . node_modules/node-mavlink
 script:
  - npm test
