--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
  - npm install
  - npm run build
- - ln -s . node_modules/node-mavlink
+ - ln -s $TRAVIS_BUILD_DIR node_modules/node-mavlink
  - ls -al node_modules/node-mavlink
 script:
  - npm test
