--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "github.com/ifrunistuttgart/node-mavlink"
   },
   "author": "Pascal Groß <pascal.gross@ifr.uni-stuttgart.de>",
-  "license": "CC-BY-4.0",
+  "license": "LGPLv3",
   "dependencies": {
     "@types/node": "^11.11.6"
   },
